@startuml

class Application
{
    +start(Stage)
    +main(String[])
    'calls launch() which calls start
    'shows the stage
}

class ToDoHomeController
{
    -MenuItem EditListButton
    -MenuItem RemoveListButton
    -MenuItem ShowListButton
    -Button addListButton
    -ListView<?> list
    -ContextMenu listContextMenu
    -Button loadListButton
    -Button saveListButton

    +addList(ActionEvent)
    +editList(ActionEvent)
    +loadListFromMemory(ActionEvent)
    +removeList(ActionEvent)
    +saveListToMemory(ActionEvent)
    +showList(ActionEvent)
}

class ToDoList
{
    +String title
    +List<Item> itemList

    +getTitle:String
    +setTitle(String)
    +getItemList: List<Item>
    +setItemList(List<Item>)
}

class Item
{
    +String description;
    +String dueDate;
    +boolean marked;

    +setDescription(String)
    +getDescription: String
    +setDueDate(String)
    +getDueDate: String
    +setMarked(boolean)
    +getMarked: boolean
}

ToDoList *-- Item
ToDoHomeController *-- ToDoList
Application -- ToDoHomeController

@enduml